--- a/gb/20/4/10/n12018497.md
+++ b/gb/20/4/10/n12018497.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ux2545/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ux2545/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ux2545/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ux2545/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ux2545/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ux2545/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ux2545/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ux2545/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ux2545/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ux2545/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ux2545/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ux2545/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ux2545/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>响应防疫宅在家 BTS演唱会将提供免费线上看</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/191208221328100707-600x400.jpg" />
+<a href="https://d3sh8rhxyvin24.cloudfront.net/F6bxMgzCk"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>防弹少年团（BTS）参与Jingle Ball 2019资料照。(FREDERIC J. BROWN/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年04月10日讯】（大纪元记者曾薇心编译报导）为因应中共病毒（武汉肺炎）疫情，大众需减少外出以避免病毒扩散，韩国人气男团<ahref="https://github.com/ux2545/djy/blob/master/gb/tag/%E9%98%B2%E5%BC%B9%E5%B0%91%E5%B9%B4%E5%9B%A2.md#1">防弹少年团</a>（BTS）官方SNS今日（10日）宣布，4月18日及19日将推出“在房间里也能享受防弹少年团<ahref="https://github.com/ux2545/djy/blob/master/gb/tag/%E6%BC%94%E5%94%B1%E4%BC%9A.md#1">演唱会</a>”的活动“BANG BANG CON（?.?.?）”。</p>
-<p><ahref="https://github.com/ux2545/djy/blob/master/gb/tag/%E9%98%B2%E5%BC%B9%E5%B0%91%E5%B9%B4%E5%9B%A2.md#1">防弹少年团</a>的官方SNS今日公开了多张图片，表明将于4月18日及19日迎来周末之际，举办“BTS Concert At Home-BANG BANG CON”活动，让大家透过防弹少年团的官方YouTube频道“BANGTANTV”免费观赏防弹少年团过去的多场<ahref="https://github.com/ux2545/djy/blob/master/gb/tag/%E6%BC%94%E5%94%B1%E4%BC%9A.md#1">演唱会</a>。</p>
+	<p>【大纪元2020年04月10日讯】（大纪元记者曾薇心编译报导）为因应中共病毒（武汉肺炎）疫情，大众需减少外出以避免病毒扩散，韩国人气男团<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%98%B2%E5%BC%B9%E5%B0%91%E5%B9%B4%E5%9B%A2.md#1">防弹少年团</a>（BTS）官方SNS今日（10日）宣布，4月18日及19日将推出“在房间里也能享受防弹少年团<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BC%94%E5%94%B1%E4%BC%9A.md#1">演唱会</a>”的活动“BANG BANG CON（?.?.?）”。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%98%B2%E5%BC%B9%E5%B0%91%E5%B9%B4%E5%9B%A2.md#1">防弹少年团</a>的官方SNS今日公开了多张图片，表明将于4月18日及19日迎来周末之际，举办“BTS Concert At Home-BANG BANG CON”活动，让大家透过防弹少年团的官方YouTube频道“BANGTANTV”免费观赏防弹少年团过去的多场<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BC%94%E5%94%B1%E4%BC%9A.md#1">演唱会</a>。</p>
 </p>
-<blockquote class=""></blockquote><img width="600" src="https://raw.githubusercontent.com/ux2545/www/master/t/ntdtv/ins.jpg" ><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/ux2545/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 540px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/B-w61xCBqxv/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12">
+<blockquote class=""></blockquote><a href="https://d3sh8rhxyvin24.cloudfront.net/F6bxMgzCk"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/www/master/t/ntdtv/ins.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 540px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/B-w61xCBqxv/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12">
 <div style="padding: 16px;">
 <div style="display: flex; flex-direction: row; align-items: center;"></div>
 <div style="padding: 19% 0;"></div>
@@ -31,53 +31,58 @@
 <p dir="ltr" lang="ko">??? ??? ????? ???<br />
 ?.?.?</p>
 <p>?? ? ??? ??? ???!<br />
-?? ?? ?? ???!<ahref="https://twitter.com/hashtag/%EB%B0%A9%EB%B0%A9%EC%BD%98?src=hash&amp;ref_src=twsrc%5Etfw">#???</a> <ahref="https://twitter.com/hashtag/%EB%B0%A9%EC%97%90%EC%84%9C%EC%A6%90%EA%B8%B0%EB%8A%94%EB%B0%A9%ED%83%84%EC%86%8C%EB%85%84%EB%8B%A8%EC%BD%98%EC%84%9C%ED%8A%B8?src=hash&amp;ref_src=twsrc%5Etfw">#??????????????</a> <ahref="https://twitter.com/hashtag/%EC%95%84%EB%AF%B8%EB%B0%A4%EC%A4%80%EB%B9%84?src=hash&amp;ref_src=twsrc%5Etfw">#?????</a> <ahref="https://twitter.com/hashtag/%EC%A7%91%EC%BD%95%EB%B0%A9%EC%BD%95%EB%B0%A9%EB%B0%A9%EC%BD%98?src=hash&amp;ref_src=twsrc%5Etfw">#???????</a> <ahref="https://twitter.com/hashtag/%ED%99%94%EC%98%A8%EC%8A%A4?src=hash&amp;ref_src=twsrc%5Etfw">#???</a> <ahref="https://twitter.com/hashtag/%ED%99%94%EC%98%A8%EC%8A%A4%EC%97%90?src=hash&amp;ref_src=twsrc%5Etfw">#????</a> <ahref="https://twitter.com/hashtag/%EC%9C%99%EC%8A%A4%ED%88%AC%EC%96%B4?src=hash&amp;ref_src=twsrc%5Etfw">#????</a> <ahref="https://twitter.com/hashtag/%EC%9C%99%ED%8C%8C%EC%BD%98?src=hash&amp;ref_src=twsrc%5Etfw">#???</a> <ahref="https://twitter.com/hashtag/LY%EC%84%9C%EC%9A%B8?src=hash&amp;ref_src=twsrc%5Etfw">#LY??</a> <ahref="https://twitter.com/hashtag/%EB%A0%88%EB%93%9C%EB%B6%88%EB%A0%9B_%EC%97%90%EC%9D%B4%EC%9A%94%EB%82%B4%EA%B0%80%EB%88%84%EA%B5%AC?src=hash&amp;ref_src=twsrc%5Etfw">#????_???????</a> <ahref="https://twitter.com/hashtag/%EB%A8%B8%EC%8A%A4%ED%84%B03%EB%B3%B4%EB%9D%BC%ED%95%B4?src=hash&amp;ref_src=twsrc%5Etfw">#???3???</a> <ahref="https://twitter.com/hashtag/%EB%A8%B8%EC%8A%A4%ED%84%B04%EC%95%84%EB%AF%B8%EB%B0%A4%EC%9A%94%EC%A0%95?src=hash&amp;ref_src=twsrc%5Etfw">#???4?????</a> <ahref="https://t.co/hEDH5KisTk"></a><img width="600" src="https://raw.githubusercontent.com/ux2545/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ux2545/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="hEDH5KisTk</a></p>
+?? ?? ?? ???!<ahref="https://twitter.com/hashtag/%EB%B0%A9%EB%B0%A9%EC%BD%98?src=hash&amp;ref_src=twsrc%5Etfw">#???</a> <ahref="https://twitter.com/hashtag/%EB%B0%A9%EC%97%90%EC%84%9C%EC%A6%90%EA%B8%B0%EB%8A%94%EB%B0%A9%ED%83%84%EC%86%8C%EB%85%84%EB%8B%A8%EC%BD%98%EC%84%9C%ED%8A%B8?src=hash&amp;ref_src=twsrc%5Etfw">#??????????????</a> <ahref="https://twitter.com/hashtag/%EC%95%84%EB%AF%B8%EB%B0%A4%EC%A4%80%EB%B9%84?src=hash&amp;ref_src=twsrc%5Etfw">#?????</a> <ahref="https://twitter.com/hashtag/%EC%A7%91%EC%BD%95%EB%B0%A9%EC%BD%95%EB%B0%A9%EB%B0%A9%EC%BD%98?src=hash&amp;ref_src=twsrc%5Etfw">#???????</a> <ahref="https://twitter.com/hashtag/%ED%99%94%EC%98%A8%EC%8A%A4?src=hash&amp;ref_src=twsrc%5Etfw">#???</a> <ahref="https://twitter.com/hashtag/%ED%99%94%EC%98%A8%EC%8A%A4%EC%97%90?src=hash&amp;ref_src=twsrc%5Etfw">#????</a> <ahref="https://twitter.com/hashtag/%EC%9C%99%EC%8A%A4%ED%88%AC%EC%96%B4?src=hash&amp;ref_src=twsrc%5Etfw">#????</a> <ahref="https://twitter.com/hashtag/%EC%9C%99%ED%8C%8C%EC%BD%98?src=hash&amp;ref_src=twsrc%5Etfw">#???</a> <ahref="https://twitter.com/hashtag/LY%EC%84%9C%EC%9A%B8?src=hash&amp;ref_src=twsrc%5Etfw">#LY??</a> <ahref="https://twitter.com/hashtag/%EB%A0%88%EB%93%9C%EB%B6%88%EB%A0%9B_%EC%97%90%EC%9D%B4%EC%9A%94%EB%82%B4%EA%B0%80%EB%88%84%EA%B5%AC?src=hash&amp;ref_src=twsrc%5Etfw">#????_???????</a> <ahref="https://twitter.com/hashtag/%EB%A8%B8%EC%8A%A4%ED%84%B03%EB%B3%B4%EB%9D%BC%ED%95%B4?src=hash&amp;ref_src=twsrc%5Etfw">#???3???</a> <ahref="https://twitter.com/hashtag/%EB%A8%B8%EC%8A%A4%ED%84%B04%EC%95%84%EB%AF%B8%EB%B0%A4%EC%9A%94%EC%A0%95?src=hash&amp;ref_src=twsrc%5Etfw">#???4?????</a> <ahref="https://t.co/hEDH5KisTk"></a><a href="https://d3sh8rhxyvin24.cloudfront.net/F6bxMgzCk"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="hEDH5KisTk</a></p>
 <p>— BTS_official (@bts_bighit) <ahref="https://twitter.com/bts_bighit/status/1248445604683898888?ref_src=twsrc%5Etfw">April 10, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>由于BANG不仅是“防弹少年团”的“防”，也与“房间”的“房”同音，因此本次活动以双关语取名为“BANG BANG CON”来象征“房间里看防弹少年团演唱会”，别具巧思。</p>
 <p>特别的是，4月18日与19日原先是防弹少年团在首尔奥林匹克主竞技场举办“BTS MAP OF THE SOUL TOUR”演唱会的日子。今日中午，官方SNS更宣布，粉丝若过Weverse观看“BANG BANG CON”，使用“ARMY BOMB（官方应援手灯）”还可以连接成演唱会模式。</p>
 </p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="ko">BTS MAP OF THE SOUL TOUR ?? ?? ?? ???<ahref="https://twitter.com/hashtag/BTS?src=hash&amp;ref_src=twsrc%5Etfw">#BTS</a> <ahref="https://twitter.com/hashtag/%EB%B0%A9%ED%83%84%EC%86%8C%EB%85%84%EB%8B%A8?src=hash&amp;ref_src=twsrc%5Etfw">#?????</a> <ahref="https://twitter.com/hashtag/MapOfTheSoulTour?src=hash&amp;ref_src=twsrc%5Etfw">#MapOfTheSoulTour</a> <ahref="https://t.co/cpJ59TyHn4"></a><img width="600" src="https://raw.githubusercontent.com/ux2545/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ux2545/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="cpJ59TyHn4</a></p>
+<p dir="ltr" lang="ko">BTS MAP OF THE SOUL TOUR ?? ?? ?? ???<ahref="https://twitter.com/hashtag/BTS?src=hash&amp;ref_src=twsrc%5Etfw">#BTS</a> <ahref="https://twitter.com/hashtag/%EB%B0%A9%ED%83%84%EC%86%8C%EB%85%84%EB%8B%A8?src=hash&amp;ref_src=twsrc%5Etfw">#?????</a> <ahref="https://twitter.com/hashtag/MapOfTheSoulTour?src=hash&amp;ref_src=twsrc%5Etfw">#MapOfTheSoulTour</a> <ahref="https://t.co/cpJ59TyHn4"></a><a href="https://d3sh8rhxyvin24.cloudfront.net/F6bxMgzCk"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="cpJ59TyHn4</a></p>
 <p>— BigHit Entertainment (@BigHitEnt) <ahref="https://twitter.com/BigHitEnt/status/1219771809400115201?ref_src=twsrc%5Etfw">January 22, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
-<p>尽管防弹少年团的演唱会因中共病毒在全球蔓延而取消，经纪公司<ahref="https://github.com/ux2545/djy/blob/master/gb/tag/big-hit%E5%A8%B1%E4%B9%90.md#1">Big Hit娱乐</a>仍为粉丝们准备了“在家也能看演唱会”的活动，还于官方推特以hasgtag标注“宅在家里BANG BANG CON (#???????)”。此活动也获得粉丝好评，并透过网路留言表示“太感谢了”、“要乖乖在家看演唱会了”。</p>
+<p>尽管防弹少年团的演唱会因中共病毒在全球蔓延而取消，经纪公司<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/big-hit%E5%A8%B1%E4%B9%90.md#1">Big Hit娱乐</a>仍为粉丝们准备了“在家也能看演唱会”的活动，还于官方推特以hasgtag标注“宅在家里BANG BANG CON (#???????)”。此活动也获得粉丝好评，并透过网路留言表示“太感谢了”、“要乖乖在家看演唱会了”。</p>
 <p>责任编辑：苏漾</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/3/24/n11970692.md#1">防弹少年团谢医护人员 吁彼此关怀共渡疫期</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/3/27/n11978999.md#1">BTS美国演出因疫情延期 KCON 2020 NY取消</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/3/31/n11992400.md#1">BTS登《深夜秀》 RM：疫情中以勇气与笑容连系</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/9/n12016053.md#1">BTS专辑累计销量破2000万张 韩国歌手之冠</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/24/n11970692.md#1">防弹少年团谢医护人员 吁彼此关怀共渡疫期</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/27/n11978999.md#1">BTS美国演出因疫情延期 KCON 2020 NY取消</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/31/n11992400.md#1">BTS登《深夜秀》 RM：疫情中以勇气与笑容连系</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/9/n12016053.md#1">BTS专辑累计销量破2000万张 韩国歌手之冠</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/ux2545/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284443.md#1" target="_blank">林辉：受蒋介石赞赏的“苗王”被逼自杀背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/8/n12013466.md#1">台染疫男童的9接触者有症状 部分检验结果出炉</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/8/n12012723.md#1">任志强被调查 传需向中南海交代</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/8/n12014864.md#1">【靖远快评】冰岛病例藏信息 疫情将改变世界</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/8/n12014891.md#1">谭德塞再成为中共喉舌  美议员：信誉尽失</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/8/n12014860.md#1">如何处理任志强 专家：习近平当局倍感棘手</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/7/n12011319.md#1">《蝙蝠侠》男星班迪特 因中共肺炎并发症去世</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/7/n12012050.md#1">脸书帖文谈中共病毒名称 黄明志反击五毛围攻</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/7/n12011718.md#1">疫情下林郑执意加薪 黄秋生杜汶泽斥责无耻</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/9/n12016763.md#1">李明依罹甲状腺癌 动刀切除恶性肿瘤</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/2/n11998489.md#1">庚子流年卦 无妄卦示现2020时局</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/4/7/n12010421.md#1">疫情下行善 美暖男在超市为30名陌生人付账</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/3/31/n11992880.md#1">婢女有情有义 代嫁后获命运青睐</a></li>
-<li><a href="https://github.com/ux2545/djy/blob/master/gb/20/3/28/n11984016.md#1">历劫的传说 向神求助生奇迹</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ux2545/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ux2545/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/10/n12018497.htm">响应防疫宅在家 BTS演唱会将提供免费线上看</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/10/n12018497.htm">响应防疫宅在家 BTS演唱会将提供免费线上看</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ux2545/djy/blob/master/gb/20/4/10/n12018497.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ux2545/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ux2545/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ux2545/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ux2545/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ux2545/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/4/10/n12018497.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
